adding org-roam capture

--- a/init.org
+++ b/init.org
@@ -289,7 +289,53 @@ tangle
           :head "#+TITLE: ${title}\n"
           :unnarrowed t))
         )
+  (require 'org-roam-protocol)
+
+  (defun my/org-roam--backlinks-list-with-content (file)
+    (with-temp-buffer
+      (if-let* ((backlinks (org-roam--get-backlinks file))
+                (grouped-backlinks (--group-by (nth 0 it) backlinks)))
+          (progn
+            (insert (format "\n\n* %d Backlinks\n"
+                            (length backlinks)))
+            (dolist (group grouped-backlinks)
+              (let ((file-from (car group))
+                    (bls (cdr group)))
+                (insert (format "** [[file:%s][%s]]\n"
+                                file-from
+                                (org-roam--get-title-or-slug file-from)))
+                (dolist (backlink bls)
+                  (pcase-let ((`(,file-from _ ,props) backlink))
+                    (insert (s-trim (s-replace "\n" " " (plist-get props :content))))
+                    (insert "\n\n")))))))
+      (buffer-string)))
+
+
+  (defun my/org-export-preprocessor (backend)
+    (let ((links (my/org-roam--backlinks-list-with-content (buffer-file-name))))
+      (unless (string= links "")
+        (save-excursion
+          (goto-char (point-max))
+          (insert (concat "\n* Backlinks\n") links)))))
+
+
+  (add-hook 'org-export-before-processing-hook 'my/org-export-preprocessor)
+
 #+end_src
+** Org-capture advice
+   #+begin_src emacs-lisp
+     (defadvice org-capture
+         (after make-full-window-frame activate)
+       "Advise capture to be the only window when used as a popup"
+       (if (equal "emacs-capture" (frame-parameter nil 'name))
+           (delete-other-windows)))
+
+     (defadvice org-capture-finalize
+         (after delete-capture-frame activate)
+       "Advise capture-finalize to close the frame"
+       (if (equal "emacs-capture" (frame-parameter nil 'name))
+           (delete-frame)))
+   #+end_src
 ** evil
 #+begin_src emacs-lisp :tangle no
   (use-package evil
