--- a/init.org
+++ b/init.org
@@ -253,7 +253,6 @@ tangle
      (when (my-system-type-is-windows)
        (setq org-download-screenshot-method "magick convert clipboard: %s")
        )
-
    #+end_src
 ** Org-roam
 #+begin_src emacs-lisp
@@ -363,6 +362,11 @@ tangle
           evil-want-integration t
           evil-want-keybinding nil)
     :config
+    (evil-set-initial-state 'elfeed-show-mode-map 'emacs)
+    (evil-set-initial-state 'elfeed-search-mode-map 'emacs)
+    (evil-set-initial-state 'magit-mode-map 'emacs)
+    (evil-set-initial-state 'dired-mode-map 'emacs)
+    (evil-set-initial-state 'info-mode-map 'emacs)
     (evil-mode t))
 #+end_src
 ** Corral
